# Laboratory-work

./: README.md  app.py  main.py  pyproject.toml
lemma_syllables_and_POS/: __init__.py  syllables_and_POS.py
tests/: test_syllables_and_POS.py
