[tool.poetry]
name = "automatic lemmatizer"
version = "0.1.0"
description = "Даний застосунок призначений для автоматичної лематизації слів та визначення їхніх граматичних категорій."
authors = ["Arsenii Buhaiev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
gradio = "^5.5.0"
pymorphy3 = "^2.0.2"
pymorphy3-dicts-uk = "^2.4.1.1.1663094765"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
